[package]
name = "bintool"
version = "0.1.0"
authors = ["Mambisi Zempare <lilbizi96@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = "2.33.3"
io = { path = "../io" }
merkle = { path = "../merkle-storage/merkle" }
flate2 = "1.0.19"

[target.'cfg(not(target_env = "msvc"))'.dependencies]
jemallocator = "0.3.2"
jemalloc-ctl = "0.3.3"