[package]
name = "io"
version = "0.1.0"
authors = ["Mambisi Zempare <lilbizi96@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bincode = "1.3.1"
serde = { version = "1.0", features = ["derive", "rc"] }
serde_json = "1.0"
bytes = "1.0.1"
anyhow = "1.0.38"
snap = "1"
flate2 = "1.0.19"
cluFlock = "1.2.5"
hex = "0.4"
[dev-dependencies]
tempfile = "3.1.0"