[package]
name = "merkle"
version = "0.1.0"
authors = ["Mambisi Zempare <lilbizi96@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[dependencies]
base58 = "0.1.0"
failure = "0.1"
failure_derive = "0.1"
blake2 = "0.9"
hex = "0.4"
num-bigint = { version = "0.3", features = ["serde", "rand"] }
num-traits = "0.2.8"
rand = "0.7.3"
sodiumoxide = "0.2.5"
serde = { version = "1.0", features = ["derive", "rc"] }
im = { version = "15.0.0", features = ["serde"] }
bincode = "1.3"
slog = "2.5"
serde_json = "1.0"
patricia_tree = "0.3.0"
linked_hash_set = { git = "https://github.com/mambisi/linked-hash-set.git" }
rayon = "1.5.0"
# protobuf
pprof = { version = "0.4.0", features=["protobuf"]}
[dev-dependencies]
hex = "0.4"
maplit = "1.0"
rand = "0.7.3"
serial_test = "0.5"
slog-async = "2.5"
slog-term = "2.6"
assert-json-diff = "1.0.0"
serde_json = "1.0"
