[package]
name = "sync"
version = "0.1.0"
authors = ["Mambisi Zempare <lilbizi96@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = { version = "1.0", features = ["derive", "rc"] }
serde_json = "1.0"
reqwest = { version = "0.10", features = ["json"] }
tokio = { version = "0.2", features = ["full"] }
clap = "2.33.3"
common = { path = "../common" }
io = { path = "../io" }
tracing = "0.1"
tracing-subscriber = "0.2"